# weather-alert

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_weather_alert.py
weather_alert/: .env  alert_system.py  main.py  weather_service.py
